--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/p/fuller-capana-11-2024-mexico-margin.html">Ver catálogo</button>
                 <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/p/descarga-automatica-con-alerta-funcion.html">Descargar PDF</button>
                 <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/2024/08/menu-de-catalogos-margin-0where.html">Catálogos</button>
+               <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/p/body-font-family-arial-sans-serif_29.html">Inicio</button>
             </div>
 
             <!-- Iframe donde se mostrará el contenido de los botones del menú -->
