--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <div class="button-home" id="home-button">🏠</div> <!-- Botón de inicio -->
 
             <!-- Contenedor del menú con 3 botones -->
+                  <!-- Contenedor del menú con 3 botones -->
             <div class="menu-container" id="menu-container">
                 <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/p/fuller-capana-11-2024-mexico-margin.html">Ver catálogo</button>
                 <button class="menu-button" data-url="https://catalogosfuller.blogspot.com/p/descarga-automatica-con-alerta-funcion.html">Descargar PDF</button>
