--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <!-- Contenedor del menú con 3 botones -->
                   <!-- Contenedor del menú con 3 botones -->
             <div class="menu-container" id="menu-container">
-                <button class="menu-button" data-url="https://elmensajeuniversal.blogspot.com/2024/10/s-spanhover-colorvar-primary-audio.html">Ver catálogo</button>
+                <button class="menu-button" data-url="https://elmensajeuniversal.blogspot.com/2024/10/s-spanhover-colorvar-primary-audio.html">RADIO</button>
                 <button class="menu-button" data-url="https://vimeo.com/event/4485560/embed/3638369759/interaction">TV</button>
                 <button class="menu-button" data-url="https://unife.mx/programacion/
 ">programacion</button>
